objects/signature__Signature__c.object
<CustomObject>
    <description>Verifications and Signature Documents</description>
    <fields>
        <fullName>signature__City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__Clicked__c</fullName>
        <label>Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>signature__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Signatures</relationshipLabel>
        <relationshipName>Signatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>signature__Date_2__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>signature__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>signature__Emailed__c</fullName>
        <label>Emailed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>signature__Full_Name__c</fullName>
        <formula>signature__Name__c &amp; &quot; &quot; &amp;  signature__Name_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Signatures</relationshipLabel>
        <relationshipName>Signatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>signature__Legal_Text__c</fullName>
        <label>Legal Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>signature__Name_2__c</fullName>
        <label>Name 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__Name__c</fullName>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__Requested__c</fullName>
        <label>Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>signature__Signed__c</fullName>
        <label>Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>signature__State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Viewed</fullName>
                </value>
                <value>
                    <fullName>Clicked</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signature__Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>signature__Viewed__c</fullName>
        <label>Viewed</label>
        <type>DateTime</type>
    </fields>
    <label>Signature</label>
    <listViews>
        <fullName>signature__All</fullName>
        <columns>NAME</columns>
        <columns>signature__Full_Name__c</columns>
        <columns>signature__City__c</columns>
        <columns>signature__State__c</columns>
        <columns>signature__Date_2__c</columns>
        <columns>signature__Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S{000000}</displayFormat>
        <label>S#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>